--- a/feature_places/presentation/src/main/AndroidManifest.xml
+++ b/feature_places/presentation/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.app.presentation">
+    package="com.app.featureplaces.presentation">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 </manifest>
